# RandomWalkSeq

./: .gitignore  CMakeLists.txt  README.md  build_release.sh  build_release_macos.sh  build_release_windows.bat  compile_commands.json
Apps/DynamicLibrary/: CMakeLists.txt
CPM_modules/: FindJUCE.cmake
Plugins/: CMakeLists.txt
Plugins/RandomWalkSequencer/: CMakeLists.txt
Plugins/RandomWalkSequencer/Source/: PluginProcessor.cpp  PluginProcessor.h  RandomWalkSequencer.cpp  RandomWalkSequencer.h  RandomWalkSequencerEditor.cpp  RandomWalkSequencerEditor.h
